--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=Student-Management-System-Backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/SMS
 spring.datasource.username=postgres
 spring.datasource.password=19564Hirushi
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
